# Cache

./: .gitignore  CMakeLists.txt  README.md
Compare/: CMakeLists.txt  compare.sh  comparing.txt
Compare/include/: compare.hpp
Compare/src/: main.cpp
LFU_Cache/: CMakeLists.txt  cache.hpp
LFU_Cache/include/: cache.hpp  cache_copy.hpp  lfu_cache.hpp
LFU_Cache/src/: main.cpp
Perfect_Caching/: CMakeLists.txt
Perfect_Caching/include/: perfect_cache.hpp
Perfect_Caching/src/: main.cpp
src/: main.cpp
tests/: CMakeLists.txt  main.cpp  test1.txt  test_runner.sh
tests/include/: test_generating.hpp
tests/lfu_resources/tests/: test0.txt  test1.txt  test10.txt  test100.txt  test101.txt  test102.txt  test103.txt  test104.txt  test105.txt  test106.txt  test107.txt  test108.txt  test109.txt  test11.txt  test110.txt  test111.txt  test112.txt  test113.txt  test114.txt  test115.txt  test116.txt  test117.txt  test118.txt  test119.txt  test12.txt  test120.txt  test121.txt  test122.txt  test123.txt  test124.txt  test125.txt  test126.txt  test127.txt  test128.txt  test129.txt  test13.txt  test130.txt  test131.txt  test132.txt  test133.txt  (+111 more)
tests/perfect_resources/tests/: test0.txt  test1.txt  test10.txt  test100.txt  test101.txt  test102.txt  test103.txt  test104.txt  test105.txt  test106.txt  test107.txt  test108.txt  test109.txt  test11.txt  test110.txt  test111.txt  test112.txt  test113.txt  test114.txt  test115.txt  test116.txt  test117.txt  test118.txt  test119.txt  test12.txt  test120.txt  test121.txt  test122.txt  test123.txt  test124.txt  test125.txt  test126.txt  test127.txt  test128.txt  test129.txt  test13.txt  test130.txt  test131.txt  test132.txt  test133.txt  (+111 more)
tests/resources/: test0.txt  test11.txt  test21.txt  test24.txt  test28.txt  test39.txt  test47.txt
tests/src/: main.cpp
